# knowledge_verificator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml  run.sh  run_docker.sh
.github/workflows/: docker.yaml  main.yml
examples/: nli_usage.md  qg_usage.md
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: config.js  utils.js
frontend/src/routes/: +page.svelte  LearningMaterial.svelte  Loader.svelte  NextButton.svelte  Tooltip.svelte
frontend/src/routes/answer/: +page.svelte
frontend/src/routes/evaluate/: +page.svelte
frontend/src/routes/read/: +page.svelte
frontend/static/: global.css
knowledge_verificator/: __init__.py  answer_chooser.py  backend.py  command_line.py  download_models.py  io_handler.py  logger.py  main.py  materials.py  nli.py  qg.py
knowledge_verificator/qg/: __init__.py  base.py  gemma.py  phi.py  qg_model_factory.py  t5.py  t5_fine_tuned.py  t5_flan_base.py  tiny_llama.py
knowledge_verificator/utils/: configuration_parser.py  filesystem.py  menu.py  metrics.py  string.py
learning_assets/economy/: inequality.txt
learning_assets/environment/: human_impact.txt
learning_assets/influence/: jones_dilemma.txt
learning_assets/programming/: debugging.txt  python.txt
learning_assets/website_design/: accessibility.txt
tests/: __init__.py  test_filesystem_utils.py  test_nli.py  test_qg.py
tests/model/: __init__.py  qg_experiment.py  qg_test_data.yaml  runner.py
tests/software/: __init__.py  test_config.yaml  test_materials_database.py  test_nli.py  test_qg.py
