[tool.poetry]
name = "knowledge-verificator"
version = "0.1.0"
description = "User's knowledge verificator"
authors = ["Igor Sosnowicz <igor@sosnowicz.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.2"
torch = "^2.4.1"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
