[tool.poetry]
name = "knowledge-verificator"
version = "0.1.0"
description = "User's knowledge verificator"
authors = ["Igor Sosnowicz <igor@sosnowicz.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.2"
torch = "^2.4.1"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^6.2.0"
black = "^24.8.0"
mypy = "^1.11.2"
ruff = "^0.6.5"
pylint = "^3.2.7"

[tool.black]
line-length = 80
target-version = ['py312']
include = '\.py$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
